--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
             <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
-              <a href="product/100ml.html"><span>19р</span></a>
+              <a href="product/100ml.html"><span>14р</span></a>
             </div>
           </div>
           <div>
@@ -610,7 +610,7 @@
             <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
-              <a href="product/500ml.html"><span>86р</span></a>
+              <a href="product/500ml.html"><span>65р</span></a>
             </div>
           </div>
           <div>
@@ -632,7 +632,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Приятный бонус!</h1>
-          <h2>При покупке масла объёмом 250мл и более, семена в подарок!</h2>
+          <h2>При покупке масла объёмом 250мл, семена в подарок!</h2>
         </div>
       </div>
     </div><br><br>
