--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
             <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
-              <a href="product/100g.html"><span>5р</span></a>
-            </div>
+<!--               <a href="product/100g.html"><span>5р</span></a>
+ -->            </div>
           </div>
           <div>
             <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
@@ -574,8 +574,8 @@
             <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
-              <a href="product/100ml.html"><span>14р</span></a>
-            </div>
+<!--               <a href="product/100ml.html"><span>14р</span></a>
+ -->            </div>
           </div>
           <div>
             <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. </h3>
@@ -592,8 +592,8 @@
             <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/250ml.html"><h3>Масло черного тмина 250 мл.</h3></a>
-              <a href="product/250ml.html"><span>46р</span></a>
-            </div>
+<!--               <a href="product/250ml.html"><span>46р</span></a>
+ -->            </div>
           </div>
           <div>
             <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние.</h3>
@@ -610,8 +610,8 @@
             <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
-              <a href="product/500ml.html"><span>65р</span></a>
-            </div>
+<!--               <a href="product/500ml.html"><span>65р</span></a>
+ -->            </div>
           </div>
           <div>
             <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла.</h3>
