add new product

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="basket.html">Заказ</a></li>
+            <li class="active"><a href="index.html">Главная</a></li>
+            <li><a href="basket.html">Заказ</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
             <li><a href="blogs.html">Блог</a></li>
@@ -551,7 +552,7 @@
       </div>
       <div class="row">
 
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="product-item">
             <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
@@ -569,7 +570,7 @@
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="product-item">
             <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
@@ -587,7 +588,7 @@
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="product-item">
             <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
@@ -605,7 +606,10 @@
           </div>
         </div>
 
-        <div class="col-md-3">
+      </div>
+      <div class="row">
+
+        <div class="col-sm-6">
           <div class="product-item">
             <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
@@ -622,6 +626,25 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-6">
+          <div class="product-item">
+            <a href="product/caps180.html"><img src="images/caps180.jpg" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+            <div class="product-title">
+              <a href="product/caps180.html"><h3>Масло Доктор Тмин 180 капсул</h3></a>
+<!--               <a href="product/500ml.html"><span>65р</span></a>
+ -->            </div>
+          </div>
+          <div>
+            <h3>Масло черного тмина от «Доктор Тмин» в капсулах — это природное средство с противовирусным, иммуностимулирующим, антивоспалительным и противогрибковым свойствами. Подходит как для сезонной профилактики, так и лечения хронических болезней.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/caps180.html">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -632,7 +655,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Приятный бонус!</h1>
-          <h2>При покупке масла объёмом 250мл, семена в подарок!</h2>
+          <h2>При покупке масла объёмом от 250мл, семена в подарок!</h2>
         </div>
       </div>
     </div><br><br>
