--- a/product/caps180.html
+++ b/product/caps180.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Семена черного тмина 100 гр.</title>
-  <meta name="description" content="Описание семян черного тмина, которые можно купить в красивой упаковке с доставкой по г. Минску и всей Беларуси">
+  <title>Масло черного тмина 500 мл.</title>
+  <meta name="description" content="Описание масла черного тмина, которое можно купить в красивой упаковке с доставкой по г. Минску и всей Беларуси">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
@@ -55,28 +55,28 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="../images/22.jpg" class="img-responsive" alt="Масло тмина">
+          <img src="../images/caps180.jpg" class="img-responsive" alt="Масло тмина">
         </div>
         <div class="col-sm-6">
-          <h2><b>Семена черного тмина 100 гр.</b></h2>
-          <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
-          <ul style = "margin-left: 20px" >
-            <h3><li>Эфиопские семена;</li></h3>
-            <h3><li>Сертификация;</li></h3>
-            <h3><li>Собственное производство.</li></h3>
-          </ul>
-          <h3>Товар сертифицирован, соответствует техническому регламенту на масложировую продукцию.</h3>
-          <br>
-          <div class="blog-item">
-            <div>
-              <a href="../basket.html">Купить семена "Доктор Тмин"</a>
+            <h2><b>Масло Доктор Тмин 180 капсул</b></h2>
+            <h3>Масло черного тмина от «Доктор Тмин» в капсулах — это природное средство с противовирусным, иммуностимулирующим, антивоспалительным и противогрибковым свойствами. Подходит как для сезонной профилактики, так и лечения хронических болезней.</h3>
+            <ul style = "margin-left: 20px" >
+              <h3><li>Натуральное, 100% масло без примесей;</li></h3>
+              <h3><li>Первый холодный отжим;</li></h3>
+              <h3><li>Эфиопские семена;</li></h3>
+              <h3><li>Сертификация;</li></h3>
+              <h3><li>Собственное производство.</li></h3>
+            </ul>
+            <h3>Товар сертифицирован, соответствует техническому регламенту на масложировую продукцию.</h3>
+            <br>
+            <div class="blog-item">
+              <div>
+                <a href="../basket.html">Купить масло "Доктор Тмин"</a>
+              </div>
+              <br><br><br>
             </div>
-            <br><br><br>
-          </div>
         </div>
-
       </div>
-      <br><br><br><br><br><br><br><br><br><br><br>
     </section>
 
 
