--- a/recomend.html
+++ b/recomend.html
@@ -35,6 +35,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="index.html">Главная</a></li>
             <li><a href="basket.html">Заказ</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
