--- a/thanks.html
+++ b/thanks.html
@@ -40,6 +40,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="index.html">Главная</a></li>
             <li><a href="basket.html">Заказ</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
@@ -63,7 +64,7 @@
           <h1>Спасибо! Мы свяжемся с Вами в ближайшее время.<br><br></h1>  </div>
         </div>
       </div>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br><br><br>
     </section>
 
     <footer class="footer">
