--- a/basket.html
+++ b/basket.html
@@ -97,9 +97,19 @@
         </div>
       </div>
 
+
+
       <div class="col-sm-12">
         <br><br>
         <h3>Нажимая "Заказать звонок", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
+      </div>
+
+      <!--reCAPTCHA -->
+      <div class="col-md-12">
+        <div class="g-recaptcha" data-sitekey="6LejOvUZAAAAAPq-lonP1seRqUrseoqm-_ufEDPk"></div>
+        <div class="text-danger" id="recaptchaError"></div>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
+        <br><br><br>
       </div>
 
       <div class="align-center">
@@ -110,7 +120,6 @@
           </div>
         </div>
       </div>
-
 
     </form>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
