--- a/product/250ml.html
+++ b/product/250ml.html
@@ -31,12 +31,11 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="../index.html"><b>Cu</b>min</a>
-          <a href="../basket.html"><span class="shoping-cart">Заказ</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Главная</a></li>
+            <li><a href="../index.html">Главная</a></li>
             <li><a href="../basket.html">Заказ</a></li>
             <li><a href="../polza_tmina.html">Польза тмина</a></li>
             <li><a href="../production.html">Производство</a></li>
