--- a/index.html
+++ b/index.html
@@ -82,16 +82,7 @@
 
     <section class="new-section">
     <div class="container">
-      <div class="row">
-
-        <div class="col-md-12">
-          <div class="titie-section">
-            <br><br><br><br>
-            <h1>Магазин</h1>
-            <br><br>
-          </div>
-        </div>
-      </div>
+      
 
       
       <div class="row">
@@ -159,7 +150,7 @@
             <a href="product/caps180.html"><img src="images/caps180.jpg" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/caps180.html"><h3>Масло Доктор Тмин 180 капсул</h3></a>
-              <a href="product/500ml.html"><span>29р</span></a>
+              <a href="product/caps180.html"><span>39р</span></a>
             </div>
           </div>
           <div>
