--- a/index.html
+++ b/index.html
@@ -467,7 +467,9 @@
           </div>
         </div>
         <div class="col-md-6">
+
           <form action="send.php" method="post" class="contact-form">
+            
             <div class="row">
               <div class="col-md-6">
                 <div class="input-group">
@@ -488,6 +490,15 @@
                 </div>
               </div>
             </div>
+            <br><br>
+            <!--reCAPTCHA -->
+            <div class="col-md-12">
+              <div class="g-recaptcha" data-sitekey="6LfMSfUZAAAAAIAZuVGIkbUxQr7npV0fJ0bI99mv"></div>
+              <div class="text-danger" id="recaptchaError"></div>
+              <script src='https://www.google.com/recaptcha/api.js'></script>
+              <br><br><br>
+            </div>
+
             <div class="row">
               <div class="col-md-12">
                 <div class="input-group">
